
syntax="proto3";
option java_package = "dot.help.networking";
option java_outer_classname = "Protobufs";

message User{
  enum Type {COMMUNITY_DISPATCHER=0;FIRST_RESPONDER=1;ADMIN=2;}
  int64 id=1;
  string email=2;
  string username=3;
  string password=4;
  Type type=5;
  bool onDuty=6;

}

message FirstResponder {
  int64 id = 1;
  string email = 2;
  string username = 3;
  string password = 4;
  bool onDuty = 5;
}

message Profile{
  int64 id = 1;
  enum Gender {Male=0;Female=1;Other=2;}
  enum BloodGroup {A_POSITIVE=0; A_NEGATIVE=1; B_POSITIVE=2; B_NEGATIVE=3; O_POSITIVE=4; O_NEGATIVE=5; AB_POSITIVE=6; AB_NEGATIVE=7;}
  User user = 2;
  string firstName = 3;
  string lastName = 4;
  Gender gender = 5;
  string birthDate = 6;
  BloodGroup bloodGroup = 7;
  double height = 8;
  double weight = 9;
  string medicalConditions = 10;
  double score = 11;
}

message Emergency{
  int64 id = 1;
  enum Status {Reported=0;Responded=1;OnSite=2;Resolved=3;}
  User reporter = 2;
  User responder = 3;
  Status status = 4;
  string date = 5;
  string description = 6;
  string location = 7;

}

message Request{
  enum Type{LOGIN = 0;LOGOUT = 1;
    GET_USER = 2;
    GET_PROFILE = 3;SAVE_PROFILE = 4;UPDATE_PROFILE = 5;
    GET_EMERGENCY = 6;UPDATE_EMERGENCY = 7;
    REPORT_EMERGENCY = 8; RESPOND_EMERGENCY = 9;
    GET_EMERGENCIES = 10;
  }
  Type type = 1;

    User user = 2;
    Profile profile = 3;
    Emergency emergency = 4;
    FirstResponder firstResponder = 5;

}

message Response{
  enum Type{OK=0;ERROR=1;EMERGENCY_RESPONDED=2;EMERGENCY_REPORTED=3;}
  Type type = 1;
  string error = 2;
  User user = 3;
  repeated Emergency emergencies = 4;
  Emergency emergency = 5;
  Profile profile = 6;
}